fix shift and caps bugs

--- a/src/styles/_simplekeyboard.scss
+++ b/src/styles/_simplekeyboard.scss
@@ -28,4 +28,28 @@
     box-shadow: 0px 0px 40px 5px rgba(255, 255, 0, 0.5);
     z-index: 1;
 }
-  
+
+
+.simple-keyboard.hg-theme-shift.myTheme {
+    border: 5px solid rgb(255, 0, 0, 0.7);
+    border-radius: 10px;
+    margin: 10px;
+    width: calc(100% - 20px);
+}
+
+.simple-keyboard.hg-layout-shift .hg-button {
+    background: rgba(255, 255, 255, 0.7);
+    color: rgb(0, 0, 0);
+    min-height: 65px;
+    font-size: x-large;
+}
+
+.simple-keyboard.hg-layout-shift .hg-button.hg-red {
+    background: rgb(255, 0, 0, 0.7);
+    color: white;
+}
+
+.simple-keyboard.hg-layout-shift .hg-button.hg-highlight {
+    box-shadow: 0px 0px 40px 5px rgba(255, 255, 0, 0.5);
+    z-index: 1;
+}
